@@ -18,7 +18,7 @@ Source: "..\..\www\*.css"; DestDir: "{app}\www"; Flags: ignoreversion
 Source: "..\..\www\favicon.ico"; DestDir: "{app}\www"; Flags: ignoreversion
 Source: "..\..\www\*.html"; DestDir: "{app}\www"; Flags: ignoreversion
 Source: "..\..\www\index.html"; DestDir: "{app}\www"; Flags: ignoreversion isreadme
-Source: "..\..\www\images\*.jpg"; DestDir: "{app}\www\images"; Flags: ignoreversion
+;Source: "..\..\www\images\*.jpg"; DestDir: "{app}\www\images"; Flags: ignoreversion
 Source: "..\..\www\images\*.png"; DestDir: "{app}\www\images"; Flags: ignoreversion
 Source: "..\..\www\Magick++\*.html"; DestDir: "{app}\www\Magick++"; Flags: ignoreversion
 Source: "..\..\www\Magick++\*.jpg"; DestDir: "{app}\www\Magick++"; Flags: ignoreversion
