@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2010-06-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/installer/inc/files-documentation.isx: There are
+        not currently any JPEG files in the www/images directory to
+        distribute.
+
+</UL>
+<p>
 2010-06-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
